--- a/CLItools/man/sambamba-index.1
+++ b/CLItools/man/sambamba-index.1
@@ -22,7 +22,7 @@ An index is by default written to the file with the same filename except \fB\.ba
 Show a wget\-like progressbar in STDERR\.
 .
 .SH "EXAMPLES"
-Build index file \fBexample\.bam\.bai\fR given a sorted BAM file \fBexample\.bam\fR:
+Build index file example\.bam\.bai given a sorted BAM file example\.bam:
 .
 .IP "" 4
 .
