fix flagstat manpage

--- a/CLItools/man/sambamba-flagstat.1
+++ b/CLItools/man/sambamba-flagstat.1
@@ -49,8 +49,8 @@ the same as previous but mapping quality is not less than 5
 .
 .SH "OPTIONS"
 .
-.IP "\(bu" 4
-\fB\-n\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR
+.TP
+\fB\-n\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
 .
 .IP "" 4
 .
@@ -63,8 +63,8 @@ Specify number of threads to use for BAM decompression
 .IP "" 0
 
 .
-.IP "\(bu" 4
-\fB\-p\fR, \fB\-\-show\-progress\fR
+.TP
+\fB\-p\fR, \fB\-\-show\-progress\fR:
 .
 .IP "" 4
 .
@@ -76,6 +76,4 @@ Show progressbar in STDERR
 .
 .IP "" 0
 
-.
-.IP "" 0
 
