--- a/CLItools/man/sambamba-view.1
+++ b/CLItools/man/sambamba-view.1
@@ -199,7 +199,7 @@ Print basic reference sequence information:
 .
 .nf
 
- $ sambamba view \-\-reference\-info ex1_header\.bam
+ $ sambamba\-view \-\-reference\-info ex1_header\.bam
  [{"name":"chr1","length":1575},{"name":"chr2","length":1584}]
 .
 .fi
@@ -213,7 +213,7 @@ Count reads with mapping quality not less than 50:
 .
 .nf
 
- $ sambamba view \-c \-F "mapping_quality >= 50" ex1_header\.bam
+ $ sambamba\-view \-c \-F "mapping_quality >= 50" ex1_header\.bam
  3124
 .
 .fi
@@ -227,7 +227,7 @@ Count properly paired reads overlapping 100\.\.200 on chr1:
 .
 .nf
 
- $ sambamba view \-c \-F "proper_pair" ex1_header\.bam chr1:100\-200
+ $ sambamba\-view \-c \-F "proper_pair" ex1_header\.bam chr1:100\-200
  39
 .
 .fi
@@ -241,7 +241,7 @@ Output header in JSON format:
 .
 .nf
 
- $ sambamba view \-\-header \-\-format=json ex1_header\.bam
+ $ sambamba\-view \-\-header \-\-format=json ex1_header\.bam
  {"format_version":"1\.3","rg_lines":[],"sq_lines":[{"sequence_length":1575,"species":"","uri":"","sequence_name":"chr1","assembly":"","md5":""},{"sequence_length":1584,"species":"","uri":"","sequence_name":"chr2","assembly":"","md5":""}],"sorting_order":"coordinate","pg_lines":[]}
 .
 .fi
