--- a/man/sambamba-view.1
+++ b/man/sambamba-view.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-VIEW" "1" "August 2012" "" ""
+.TH "SAMBAMBA\-VIEW" "1" "March 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-view\fR \- tool for extracting information from SAM/BAM files
@@ -285,6 +285,20 @@ Set compression level for BAM output, a number from 0 to 9\.
 .nf
 
 Specify output filename (by default everything is written to STDOUT)\.
+.
+.fi
+.
+.IP "" 0
+
+.
+.TP
+\fB\-n\fR, \fB\-\-threads\fR=\fINTHREADS\fR:
+.
+.IP "" 4
+.
+.nf
+
+Number of threads to use\.
 .
 .fi
 .
