--- a/man/sambamba-index.1
+++ b/man/sambamba-index.1
@@ -1,13 +1,13 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-INDEX" "1" "August 2012" "" ""
+.TH "SAMBAMBA\-INDEX" "1" "March 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-index\fR \- tool for building standard index files for BAM data
 .
 .SH "SYNOPSIS"
-\fBsambamba\-index\fR [\fB\-p\fR|\fB\-\-show\-progress\fR] <input\.bam> [<output\.bai>]
+\fBsambamba\-index\fR [\fB\-p\fR|\fB\-\-show\-progress\fR] [\fB\-n\fR|\fB\-\-threads\fR=NTHREADS] <input\.bam> [<output\.bai>]
 .
 .SH "DESCRIPTION"
 \fBsambamba\-index\fR builds an index for a sorted by coordinate BAM file\. This step is required for effective region querying in most tools for working with BAM data\.
@@ -20,6 +20,10 @@ An index is by default written to the file with the same filename except \fB\.ba
 .TP
 \fB\-p\fR, \fB\-\-show\-progress\fR
 Show a wget\-like progressbar in STDERR\.
+.
+.TP
+\fB\-n\fR, \fB\-\-threads\fR=\fINTHREADS\fR
+Number of threads to use\.
 .
 .SH "EXAMPLES"
 Build index file example\.bam\.bai given a sorted BAM file example\.bam:
