--- a/man/sambamba-sort.1
+++ b/man/sambamba-sort.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-SORT" "1" "August 2012" "" ""
+.TH "SAMBAMBA\-SORT" "1" "March 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-sort\fR \- tool for sorting BAM files
@@ -56,6 +56,10 @@ Write sorted chunks as uncompressed BAM\. Default behaviour is to write them wit
 .TP
 \fB\-p\fR, \fB\-\-show\-progress\fR
 Show wget\-like progressbar in STDERR (in fact, two of them one after another, first one for sorting, and then another one for merging)\.
+.
+.TP
+\fB\-t\fR, \fB\-\-threads\fR=\fINTHREADS\fR
+Number of threads to use\.
 .
 .SH "BUGS"
 At the moment, the memory is used quite ineffectively\.
