uniform parameter name for threads (-t, --nthreads)
Closes #48

--- a/man/sambamba-merge.1
+++ b/man/sambamba-merge.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-MERGE" "1" "August 2012" "" ""
+.TH "SAMBAMBA\-MERGE" "1" "April 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-merge\fR \- tool for merging several BAM files into one
@@ -18,7 +18,7 @@ SAM headers are merged automatically like in Picard merging tool\.
 .SH "OPTIONS"
 .
 .TP
-\fB\-t\fR, \fB\-\-nthreads\fR=\fINUM_OF_THREADS\fR:
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
 .
 .IP "" 4
 .
