--- a/man/sambamba-flagstat.1
+++ b/man/sambamba-flagstat.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-FLAGSTAT" "1" "August 2012" "" ""
+.TH "SAMBAMBA\-FLAGSTAT" "1" "April 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-flagstat\fR \- getting flag statistics from BAM file
@@ -50,7 +50,7 @@ the same as previous but mapping quality is not less than 5
 .SH "OPTIONS"
 .
 .TP
-\fB\-n\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
 .
 .IP "" 4
 .
