--- a/man/sambamba-index.1
+++ b/man/sambamba-index.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-INDEX" "1" "March 2013" "" ""
+.TH "SAMBAMBA\-INDEX" "1" "April 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-index\fR \- tool for building standard index files for BAM data
@@ -22,7 +22,7 @@ An index is by default written to the file with the same filename except \fB\.ba
 Show a wget\-like progressbar in STDERR\.
 .
 .TP
-\fB\-n\fR, \fB\-\-threads\fR=\fINTHREADS\fR
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR
 Number of threads to use\.
 .
 .SH "EXAMPLES"
