--- a/man/sambamba-sort.1
+++ b/man/sambamba-sort.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-SORT" "1" "March 2013" "" ""
+.TH "SAMBAMBA\-SORT" "1" "April 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-sort\fR \- tool for sorting BAM files
@@ -58,7 +58,7 @@ Write sorted chunks as uncompressed BAM\. Default behaviour is to write them wit
 Show wget\-like progressbar in STDERR (in fact, two of them one after another, first one for sorting, and then another one for merging)\.
 .
 .TP
-\fB\-t\fR, \fB\-\-threads\fR=\fINTHREADS\fR
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR
 Number of threads to use\.
 .
 .SH "BUGS"
