--- a/man/sambamba-view.1
+++ b/man/sambamba-view.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-VIEW" "1" "March 2013" "" ""
+.TH "SAMBAMBA\-VIEW" "1" "April 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-view\fR \- tool for extracting information from SAM/BAM files
@@ -292,7 +292,7 @@ Specify output filename (by default everything is written to STDOUT)\.
 
 .
 .TP
-\fB\-n\fR, \fB\-\-threads\fR=\fINTHREADS\fR:
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
 .
 .IP "" 4
 .
