--- a/man/sambamba-slice.1
+++ b/man/sambamba-slice.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-SLICE" "1" "December 2012" "" ""
+.TH "SAMBAMBA\-SLICE" "1" "July 2013" "" ""
 .
 .SH "NAME"
 \fBsambamba\-slice\fR \- copying a slice of BAM file
@@ -17,10 +17,7 @@ While the same can be done with \fIsambamba\-view\fR, that would be much slower 
 .
 .SH "OPTIONS"
 .
-.nf
+.TP
+\fB\-o\fR, \fB\-\-output\-filename\fR=\fIOUTPUTFILE\fR
 
-* `\-o`, `\-\-output\-filename`=<OUTPUTFILE>:
-      Name of output file
-.
-.fi
 
