--- a/man/sambamba-view.1
+++ b/man/sambamba-view.1
@@ -1,16 +1,16 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-VIEW" "1" "July 2013" "" ""
+.TH "SAMBAMBA\-VIEW" "1" "February 2014" "" ""
 .
 .SH "NAME"
 \fBsambamba\-view\fR \- tool for extracting information from SAM/BAM files
 .
 .SH "SYNOPSIS"
-\fBsambamba\-view\fR \fIOPTIONS\fR <input\.bam | input\.sam> [region1 [\.\.\.]]
+\fBsambamba view\fR \fIOPTIONS\fR <input\.bam | input\.sam> [region1 [\.\.\.]]
 .
 .SH "DESCRIPTION"
-\fBsambamba\-view\fR allows to efficiently filter BAM file for alignments satisfying various conditions, as well as access its SAM header and information about reference sequences\. In order to make these data readily available for consumption by scripts in Perl/Python/Ruby, JSON output is provided\.
+\fBsambamba view\fR allows to efficiently filter BAM file for alignments satisfying various conditions, as well as access its SAM header and information about reference sequences\. In order to make these data readily available for consumption by scripts in Perl/Python/Ruby, JSON output is provided\.
 .
 .P
 By default, the tool expects BAM file as an input\. In order to work with SAM file, specify \fB\-S\fR|\fB\-\-sam\-input\fR command\-line option, the tool does NOT try to guess file format from extension\. Beware that when reading SAM, the tool will skip tags which don\'t conform to the SAM/BAM specification, and set invalid fields to their default values\. However, only syntax is checked, use \fB\-\-valid\fR for full validation\.
@@ -135,175 +135,56 @@ Header representation is also an array containing the following:
 .SH "OPTIONS"
 .
 .TP
-\fB\-F\fR, \fB\-\-filter\fR=\fIFILTER\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-F\fR, \fB\-\-filter\fR=\fIFILTER\fR
 Set custom filter for alignments\.
 .
-.fi
-.
-.IP "" 0
-
+.TP
+\fB\-f\fR, \fB\-\-format\fR=\fIFORMAT\fR
+Specify output format\. \fIFORMAT\fR must be one of sam, bam, json, or msgpack (in lowercase)\. Default one is SAM\.
 .
 .TP
-\fB\-f\fR, \fB\-\-format\fR=\fIFORMAT\fR:
-.
-.IP "" 4
-.
-.nf
-
-Specify output format\. <FORMAT> must be one of sam, bam, json, or msgpack (in lowercase)\.
-Default one is SAM\.
-.
-.fi
-.
-.IP "" 0
-
-.
-.TP
-\fB\-h\fR, \fB\-\-with\-header\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-h\fR, \fB\-\-with\-header\fR
 Print SAM header before reads\. This is always done for BAM output\.
 .
-.fi
-.
-.IP "" 0
-
+.TP
+\fB\-H\fR, \fB\-\-header\fR
+Print only SAM header to STDOUT\. If \fIFORMAT\fR is sam or bam, its text version is printed, otherwise JSON object is written\.
 .
 .TP
-\fB\-H\fR, \fB\-\-header\fR:
-.
-.IP "" 4
-.
-.nf
-
-Print only SAM header to STDOUT\. If <FORMAT> is sam or bam, its text version is
-printed, otherwise JSON object is written\.
-.
-.fi
-.
-.IP "" 0
-
+\fB\-I\fR, \fB\-\-reference\-info\fR
+Output to STDOUT reference sequence names and lengths in JSON (see \fIEXAMPLES\fR)\.
 .
 .TP
-\fB\-I\fR, \fB\-\-reference\-info\fR:
-.
-.IP "" 4
-.
-.nf
-
-Output to STDOUT reference sequence names and lengths in JSON (see [EXAMPLES][])\.
-.
-.fi
-.
-.IP "" 0
-
+\fB\-L\fR, \fB\-\-regions\fR=\fIBEDFILE\fR
+Intersect a file with regions specified in the BED file\.
 .
 .TP
-\fB\-c\fR, \fB\-\-count\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-c\fR, \fB\-\-count\fR
 Output to STDOUT only the number of matching records, \-hHI options are ignored\.
 .
-.fi
-.
-.IP "" 0
-
-.
 .TP
-\fB\-v\fR, \fB\-\-valid\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-v\fR, \fB\-\-valid\fR
 Output only valid reads\.
 .
-.fi
-.
-.IP "" 0
-
-.
 .TP
-\fB\-S\fR, \fB\-\-sam\-input\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-S\fR, \fB\-\-sam\-input\fR
 Specify that the input is SAM file (default is BAM for all operations)\.
 .
-.fi
-.
-.IP "" 0
-
+.TP
+\fB\-p\fR, \fB\-\-show\-progress\fR
+Show progressbar in STDERR\. Works only for BAM files, and with no regions specified, i\.e\. only when reading full file\.
 .
 .TP
-\fB\-p\fR, \fB\-\-show\-progress\fR:
-.
-.IP "" 4
-.
-.nf
-
-Show progressbar in STDERR\. Works only for BAM files, and with no regions
-specified, i\.e\. only when reading full file\.
-.
-.fi
-.
-.IP "" 0
-
-.
-.TP
-\fB\-l\fR, \fB\-\-compression\-level\fR=\fICOMPRESSION_LEVEL\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-l\fR, \fB\-\-compression\-level\fR=\fICOMPRESSION_LEVEL\fR
 Set compression level for BAM output, a number from 0 to 9\.
 .
-.fi
-.
-.IP "" 0
-
-.
 .TP
-\fB\-o\fR, \fB\-\-output\-filename\fR=\fIFILENAME\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-o\fR, \fB\-\-output\-filename\fR=\fIFILENAME\fR
 Specify output filename (by default everything is written to STDOUT)\.
 .
-.fi
-.
-.IP "" 0
-
-.
 .TP
-\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR:
-.
-.IP "" 4
-.
-.nf
-
+\fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR
 Number of threads to use\.
-.
-.fi
-.
-.IP "" 0
-
 .
 .SH "EXAMPLES"
 Print basic reference sequence information:
@@ -312,7 +193,7 @@ Print basic reference sequence information:
 .
 .nf
 
- $ sambamba\-view \-\-reference\-info ex1_header\.bam
+ $ sambamba view \-\-reference\-info ex1_header\.bam
  [{"name":"chr1","length":1575},{"name":"chr2","length":1584}]
 .
 .fi
@@ -326,7 +207,7 @@ Count reads with mapping quality not less than 50:
 .
 .nf
 
- $ sambamba\-view \-c \-F "mapping_quality >= 50" ex1_header\.bam
+ $ sambamba view \-c \-F "mapping_quality >= 50" ex1_header\.bam
  3124
 .
 .fi
@@ -340,7 +221,7 @@ Count properly paired reads overlapping 100\.\.200 on chr1:
 .
 .nf
 
- $ sambamba\-view \-c \-F "proper_pair" ex1_header\.bam chr1:100\-200
+ $ sambamba view \-c \-F "proper_pair" ex1_header\.bam chr1:100\-200
  39
 .
 .fi
@@ -354,7 +235,7 @@ Output header in JSON format:
 .
 .nf
 
- $ sambamba\-view \-\-header \-\-format=json ex1_header\.bam
+ $ sambamba view \-\-header \-\-format=json ex1_header\.bam
  {"format_version":"1\.3","rg_lines":[],
   "sq_lines":[{"sequence_length":1575,"species":"","uri":"",
   "sequence_name":"chr1","assembly":"","md5":""},
