--- a/man/sambamba.1
+++ b/man/sambamba.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA" "1" "July 2013" "" ""
+.TH "SAMBAMBA" "1" "February 2014" "" ""
 .
 .SH "NAME"
 \fBsambamba\fR \- toolkit for working with SAM/BAM files
@@ -25,6 +25,9 @@ sambamba\-merge(1)
 sambamba\-sort(1)
 .
 .IP "\(bu" 4
+sambamba\-markdup(1)
+.
+.IP "\(bu" 4
 sambamba\-flagstat(1)
 .
 .IP "\(bu" 4
@@ -33,4 +36,4 @@ sambamba\-slice(1)
 .IP "" 0
 .
 .P
-Thus available subcommands are \fIview\fR, \fIindex\fR, \fImerge\fR, \fIsort\fR, \fIflagstat\fR, and \fIslice\fR\. Their use is explained on the corresponding man pages\.
+Thus available subcommands are \fIview\fR, \fIindex\fR, \fImerge\fR, \fIsort\fR, \fImarkdup\fR, \fIflagstat\fR, and \fIslice\fR\. Their use is explained on the corresponding man pages\.
