--- a/man/sambamba-index.1
+++ b/man/sambamba-index.1
@@ -1,16 +1,16 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-INDEX" "1" "July 2013" "" ""
+.TH "SAMBAMBA\-INDEX" "1" "February 2015" "" ""
 .
 .SH "NAME"
 \fBsambamba\-index\fR \- tool for building standard index files for BAM data
 .
 .SH "SYNOPSIS"
-\fBsambamba\-index\fR [\fB\-p\fR|\fB\-\-show\-progress\fR] [\fB\-n\fR|\fB\-\-threads\fR=NTHREADS] <input\.bam> [<output\.bai>]
+\fBsambamba index\fR [\fB\-p\fR|\fB\-\-show\-progress\fR] [\fB\-n\fR|\fB\-\-threads\fR=NTHREADS] <input\.bam> [<output\.bai>]
 .
 .SH "DESCRIPTION"
-\fBsambamba\-index\fR builds an index for a sorted by coordinate BAM file\. This step is required for effective region querying in most tools for working with BAM data\.
+\fBsambamba index\fR builds an index for a sorted by coordinate BAM file\. This step is required for effective region querying in most tools for working with BAM data\.
 .
 .P
 An index is by default written to the file with the same filename except \fB\.bai\fR extension added to the end\. The user can, however, override this default by providing desired output filename explicitly as an optional command\-line argument\.
@@ -32,7 +32,7 @@ Build index file example\.bam\.bai given a sorted BAM file example\.bam:
 .
 .nf
 
-$ sambamba\-index example\.bam
+$ sambamba index example\.bam
 .
 .fi
 .
@@ -45,9 +45,9 @@ Build index file at custom location showing progress:
 .
 .nf
 
-$ sambamba\-index \-\-show\-progress example\.bam /tmp/example\.bam\.bai
+$ sambamba index \-\-show\-progress example\.bam /tmp/example\.bam\.bai
 .
 .fi
 .
 .IP "" 0
-
+For more information on the original samtools INDEX behaviour, check out the [samtools documentation](http://samtools\.sourceforge\.net/samtools\.shtml
