--- a/man/sambamba-markdup.1
+++ b/man/sambamba-markdup.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-MARKDUP" "1" "October 2013" "" ""
+.TH "SAMBAMBA\-MARKDUP" "1" "February 2015" "" ""
 .
 .SH "NAME"
 \fBsambamba\-markdup\fR \- finding duplicate reads in BAM file
@@ -10,7 +10,7 @@
 \fBsambamba markdup\fR \fIOPTIONS\fR <input\.bam> <output\.bam>
 .
 .SH "DESCRIPTION"
-Marks (by default) or removes duplicate reads\. For determining whether a read is a duplicate or not, the same criteria as in Picard are used\.
+Marks (by default) or removes duplicate reads\. For determining whether a read is a duplicate or not, the same `sum of base qualities\' method is used as in Picard \fIhttps://broadinstitute\.github\.io/picard/picard\-metric\-definitions\.html\fR\.
 .
 .SH "OPTIONS"
 .
@@ -45,6 +45,9 @@ size of the overflow list where reads, thrown away from the hash table, get a se
 .TP
 \fB\-\-io\-buffer\-size\fR=\fIBUFFERSIZE\fR
 controls sizes of two buffers of BUFFERSIZE \fImegabytes\fR each, used for reading and writing BAM during the second pass (default is 128)
+.
+.SH "SEE ALSO"
+Picard \fIhttps://broadinstitute\.github\.io/picard/picard\-metric\-definitions\.html\fR metric definitions for removing duplicates\.
 .
 .SH "BUGS"
 External sort is not implemented\. Thus, memory consumption grows by 2Gb per each 100M reads\. Check that you have enough RAM before running the tool\.
