--- a/man/sambamba-slice.1
+++ b/man/sambamba-slice.1
@@ -1,13 +1,13 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-SLICE" "1" "July 2013" "" ""
+.TH "SAMBAMBA\-SLICE" "1" "August 2014" "" ""
 .
 .SH "NAME"
 \fBsambamba\-slice\fR \- copying a slice of BAM file
 .
 .SH "SYNOPSIS"
-\fBsambamba\-slice\fR \fIOPTIONS\fR <input\.bam> \fIregion\fR
+\fBsambamba slice\fR \fIOPTIONS\fR <input\.bam> \fIregion\fR
 .
 .SH "DESCRIPTION"
 Outputs reads overlapping specified region into new BAM file\. (Default destination is STDOUT\.) Input file must be coordinate\-sorted and indexed\.
@@ -19,5 +19,5 @@ While the same can be done with \fIsambamba\-view\fR, that would be much slower 
 .
 .TP
 \fB\-o\fR, \fB\-\-output\-filename\fR=\fIOUTPUTFILE\fR
-
+Name of output file
 
