--- a/man/sambamba-sort.1
+++ b/man/sambamba-sort.1
@@ -1,13 +1,13 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA\-SORT" "1" "July 2013" "" ""
+.TH "SAMBAMBA\-SORT" "1" "February 2015" "" ""
 .
 .SH "NAME"
 \fBsambamba\-sort\fR \- tool for sorting BAM files
 .
 .SH "SYNOPSIS"
-\fBsambamba\-sort\fR \fIOPTIONS\fR <input\.bam>
+\fBsambamba sort\fR \fIOPTIONS\fR <input\.bam>
 .
 .SH "DESCRIPTION"
 BAM files can have either \'coordinate\' sort order, or \'qname\' one\.
@@ -19,7 +19,7 @@ The first one means to sort the file by (integer) reference ID, and for each ref
 \'qname\' sorting order is when reads are sorted lexicographically by their names\.
 .
 .P
-\fBsambamba\-sort\fR does an external sort on input file\. That means it reads the source BAM file in chunks that fit into memory, sorts them and writes to a temporary directory, and then merges them\. After merging temporary files are removed automatically\. The sort is stable, and efforts have been done to make it multithreaded\.
+\fBsambamba sort\fR does an external \fBstable\fR\-type sort on input file\. That means it reads the source BAM file in chunks that fit into memory, sorts them and writes to a temporary directory, and then merges them\. After merging temporary files are removed automatically\.
 .
 .P
 Both sorting orders are supported\. Default one is \'coordinate\' because this is the one used for building index later\. In order to switch to \'qname\' sorting order, use \fB\-n\fR|\fB\-\-sort\-by\-name\fR flag\.
@@ -61,5 +61,8 @@ Show wget\-like progressbar in STDERR (in fact, two of them one after another, f
 \fB\-t\fR, \fB\-\-nthreads\fR=\fINTHREADS\fR
 Number of threads to use\.
 .
+.SH "SEE ALSO"
+For more information on the original samtools SORT behaviour, check out the samtools documentation \fIhttp://samtools\.sourceforge\.net/samtools\.shtml\fR\.
+.
 .SH "BUGS"
-At the moment, the memory is used quite ineffectively\.
+At the moment, the memory is used quite ineffectively for really large files\.
