--- a/test/benchmark/stats.org
+++ b/test/benchmark/stats.org
@@ -7,6 +7,13 @@
 #+BEGIN_SRC
 monza:~/tmp$ time ./sambamba view /gnu/data/HG00100.chrom20.ILLUMINA.bwa.GBR.low_coverage.20130415.bam.orig > /dev/null
 
+sambamba 0.6.8-pre3 by Artem Tarasov and Pjotr Prins (C) 2012-2018
+    LDC 1.11.0 / DMD v2.081.2 / LLVM6.0.1 / bootstrap LDC - the LLVM D compiler (0.17.6)
+
+real    0m6.930s
+user    0m26.940s
+sys     0m0.516s
+
 sambamba 0.6.8-pre2 by Artem Tarasov and Pjotr Prins (C) 2012-2018
     LDC 1.10.0 / DMD v2.080.1 / LLVM6.0.1 / bootstrap LDC - the LLVM D compiler (0.17.4)
 
