--- a/man/sambamba.1
+++ b/man/sambamba.1
@@ -1,10 +1,10 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SAMBAMBA" "1" "February 2015" "" ""
+.TH "SAMBAMBA" "1" "February 2015-2020" "" ""
 .
 .SH "NAME"
-\fBsambamba\fR \- toolkit for working with SAM/BAM/CRAM files
+\fBsambamba\fR \- toolkit for working with SAM/BAM files
 .
 .SH "SYNOPSIS"
 \fBsambamba\fR [subcommand] [arguments\.\.\.]
